[package]
name = "twitch_recover_cli"
version = "0.1.0"
edition = "2021"
authors = ["Mageas <dev@mageas.net>"]
description = "Recover a twitch vod in cli"
keywords = ["twitch"]
license = "GPL-3.0"
repository = "https://gitea.heartnerds.org/Mageas/twitch_recover_cli"

[dependencies]
twitch_recover = "0.2"
anyhow = "1.0.66"
chrono = "0.4.22"
tokio = { version = "1.21", features = ["full"] }
reqwest = { version = "0.11", features = ["blocking"] }
clap = { version = "4.0", features = ["derive"] }
